[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/entity_sprites/character.png" type="Texture" id=2]
[ext_resource path="res://assets/world_sprites/heart.png" type="Texture" id=3]
[ext_resource path="res://assets/Backgrounds/grass.png" type="Texture" id=4]
[ext_resource path="res://assets/sfx/jump.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sfx/hit.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/sfx/block.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/sfx/hit_player.wav" type="AudioStream" id=8]

[sub_resource type="CapsuleShape2D" id=1]
radius = 32.0
height = 64.0

[sub_resource type="Animation" id=2]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "jump"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=4]
length = 0.48
loop = true
step = 0.12
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.12, 0.24, 0.36, 0.48 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 0 ]
}

[node name="Player" type="KinematicBody2D" groups=[
"Player",
]]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 64 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 2.86102e-006, 64 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 2 )
vframes = 2
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 2 )
anims/jump = SubResource( 3 )
anims/run = SubResource( 4 )

[node name="Hearts" type="Node2D" parent="."]
editor/display_folded = true

[node name="Heart1" type="Sprite" parent="Hearts"]
position = Vector2( -40, -32 )
texture = ExtResource( 3 )

[node name="Heart2" type="Sprite" parent="Hearts"]
position = Vector2( 0, -32 )
texture = ExtResource( 3 )

[node name="Heart3" type="Sprite" parent="Hearts"]
position = Vector2( 40, -32 )
texture = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.8, 0.8 )
limit_left = -100
limit_top = -2000
limit_right = 3000
limit_bottom = 1000
smoothing_enabled = true
smoothing_speed = 8.0
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0
editor_draw_limits = true

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Sprite" type="Sprite" parent="ParallaxBackground"]
position = Vector2( 636, 380 )
scale = Vector2( 1.02435, 0.967581 )
texture = ExtResource( 4 )

[node name="AudioJump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="AudioKill" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="AudioBlock" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
attenuation = 0.0044871

[node name="AudioHit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
attenuation = 0.0044871
